adds reference to Supp. Mat. of our Guide

--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -4,7 +4,11 @@ title: "Software"
 permalink: /software/
 ---
 
-<h2 class="archive__subtitle">BUQEYE Cheatsheets</h2>
+<h2 class="archive__subtitle">BUQEYE Guides and Cheatsheets</h2>
+
+<ul>
+  <li><a href="https://arxiv.org/abs/2212.04912"><i>BUQEYE Guide to Projection-Based Emulators in Nuclear Physics</i></a>: All examples discussed in the Guide and more are available as interactive, open-source <a href="https://github.com/buqeye/frontiers-emulator-review">Python Code</a> so that practitioners can readily adapt projection-based emulators for their own work.
+</ul>
 
 <ul>
   <li><a href="/assets/cheatsheets/buqeye_cheatsheet_v2.pdf"><i>The BUQEYE Cheatsheet for Pointwise Truncation Errors</i></a> (based on Appendix A in <a href="https://arxiv.org/abs/1904.10581">arXiv:1904.10581</a>).
@@ -31,41 +35,41 @@ permalink: /software/
  <li>
   <a href="https://github.com/buqeye/fast-few-body-bayesing">Notebooks and data </a> to reproduce and extend the figures in
   <i>"Fast &amp; rigorous constraints on chiral three-nucleon forces from few-body observables"</i>
-      by Wesolowski, Svensson, Ekström, Forssén, Furnstahl, Melendez, and Phillips, 
+      by Wesolowski, Svensson, Ekström, Forssén, Furnstahl, Melendez, and Phillips,
    <a href="https://arxiv.org/abs/2104.04441">arXiv:2104.04441</a>.
- </li> 
+ </li>
 
  <li>
   <a href="https://github.com/buqeye/eigenvector-continuation">Notebooks and associated codes </a> to reproduce and extend the figures in
   <i>"Efficient emulators for scattering using eigenvector continuation"</i>
-      by Furnstahl, Garcia, Millican, and Zhang, 
+      by Furnstahl, Garcia, Millican, and Zhang,
    <a href="https://arxiv.org/abs/2007.03635">arXiv:2007.03635</a>.
- </li> 
+ </li>
 
  <li>
-  <a href="https://github.com/buqeye/nuclear-matter-convergence">Notebooks and data</a> to reproduce (and extend!) all of the plots in 
+  <a href="https://github.com/buqeye/nuclear-matter-convergence">Notebooks and data</a> to reproduce (and extend!) all of the plots in
   <i>"How well do we know the neutron-matter equation of state at the densities
      inside neutron stars? A Bayesian approach with correlated uncertainties"</i>
-      by Drischler et al., 
+      by Drischler et al.,
    <a href="https://arxiv.org/abs/2004.07232">arXiv:2004.07232</a>
    and
   <i>"Quantifying uncertainties and correlations in the nuclear-matter equation of state"</i>
-      by Drischler et al., 
+      by Drischler et al.,
    <a href="https://arxiv.org/abs/2004.07805">arXiv:2004.07805</a>.
- </li> 
+ </li>
 
  <li><a href="https://github.com/buqeye/nuclear-matter-convergence/tree/master/analysis/Esym-L">Notebook and data</a> to reproduce the  "Constraints on the Sv–L correlation" plot
   from <i>"How well do we know the neutron-matter equation of state at the densities
      inside neutron stars? A Bayesian approach with correlated uncertainties"</i>
-      by Drischler et al., 
+      by Drischler et al.,
    <a href="https://arxiv.org/abs/2004.07232">arXiv:2004.07232</a>.
   </li>
 
 
  <li>
-  <a href="https://github.com/buqeye/compton-scattering">Notebooks and data</a> to reproduce (and extend!) all of the plots in 
+  <a href="https://github.com/buqeye/compton-scattering">Notebooks and data</a> to reproduce (and extend!) all of the plots in
   <i>"Designing Optimal Experiments: An Application to Proton Compton Scattering"</i>
-  by Melendez et al., 
+  by Melendez et al.,
    <a href="https://arxiv.org/abs/2004.11307">arXiv:2004.11307</a>.
  </li>
 
@@ -74,7 +78,7 @@ permalink: /software/
   	This notebook provides the code to reproduce all of the plots in Melendez et al. (2019),
   	<a href="https://arxiv.org/abs/1904.10581">arXiv:1904.10581</a> [<a href="https://journals.aps.org/prc/abstract/10.1103/PhysRevC.100.044001">Phys. Rev. C 100, 044001 (2019)</a>].
   </li>
-     
+
 </ul>
 
 <hr>
@@ -88,4 +92,3 @@ permalink: /software/
 
 </ul>
 -->
-
