adds Alberto's code to "software"

--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -30,6 +30,13 @@ permalink: /software/
 
 <ul>
 
+  <li>
+   <a href="https://github.com/buqeye/scattering-emulators">Notebooks and data </a> to generate all results and figures in
+   <i>"Wave function-based emulation for nucleon-nucleon scattering in momentum space"</i>
+       by Garcia, Drischler, Furnstahl, Melendez, and Zhang,
+    <a href="https://arxiv.org/abs/2301.05093">arXiv:2301.05093</a>.
+  </li>
+
  <li>
   <a href="https://github.com/buqeye/fast-few-body-bayesing">Notebooks and data </a> to reproduce and extend the figures in
   <i>"Fast &amp; rigorous constraints on chiral three-nucleon forces from few-body observables"</i>
