--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -7,7 +7,7 @@ permalink: /software/
 <h2 class="archive__subtitle">BUQEYE Guides and Cheatsheets</h2>
 
 <ul>
-  <li><a href="https://arxiv.org/abs/2212.04912"><i>BUQEYE Guide to Projection-Based Emulators in Nuclear Physics</i></a>: All examples discussed in the Guide and more are available as interactive, open-source <a href="https://github.com/buqeye/frontiers-emulator-review">Python Code</a> so that practitioners can readily adapt projection-based emulators for their own work. </li>
+  <li><a href="https://www.frontiersin.org/articles/10.3389/fphy.2022.1092931/full"><i>BUQEYE Guide to Projection-Based Emulators in Nuclear Physics</i></a>: All examples discussed in the Guide and more are available as interactive, open-source <a href="https://github.com/buqeye/frontiers-emulator-review">Python Code</a> so that practitioners can readily adapt projection-based emulators for their own work. </li>
 
   <li><a href="/assets/cheatsheets/buqeye_cheatsheet_v2.pdf"><i>The BUQEYE Cheatsheet for Pointwise Truncation Errors</i></a> (based on Appendix A in <a href="https://arxiv.org/abs/1904.10581">arXiv:1904.10581</a>). </li>
 </ul>
