added video to rjf S@INT seminar

--- a/_pages/talks-archive.html
+++ b/_pages/talks-archive.html
@@ -17,6 +17,7 @@ permalink: /talks/
 <ul>
    <li>
     <a href="/assets/talks/Furnstahl_INT_Saint_2023.pdf"><i>MOR emulators for low-energy nuclear physics</i></a>, presented by Dick Furnstahl, <a href="https://www.int.washington.edu/index.php/seminars/model-order-reduction-emulators-low-energy-nuclear-physics">INT S@INT Seminar</a> (virtual), June 8, 2023.
+    [<a href="https://archive.int.washington.edu/talks/S@INTvideos/Furnstahl_June_8_2023.mp4">video</a>]
   </li>
 
    <li>
