added talks from MSU and Hirschegg by rjf

--- a/_pages/talks-archive.html
+++ b/_pages/talks-archive.html
@@ -20,6 +20,14 @@ permalink: /talks/
     [<a href="https://archive.int.washington.edu/talks/S@INTvideos/Furnstahl_June_8_2023.mp4">video</a>]
   </li>
 
+  <li>
+    <a href="/assets/talks/Furnstahl_MSU_March_2023.pptx"><i>Uncertainty Quantification for Nuclear Models</i></a> <a href="/assets/talks/Furnstahl_MSU_March_2023.pdf">pdf version</a>], presented by Dick Furnstahl, MSU Nuclear Seminar, March 15, 2023.
+  </li>
+
+  <li>
+    <a href="/assets/talks/Furnstahl_Hirschegg_January_2023.pptx"><i>Frontiers of Uncertainty Quantification for EFTs</i></a> <a href="/assets/talks/Furnstahl_Hirschegg_January_2023.pdf">pdf version</a>], presented by Dick Furnstahl, EMMI Hirschegg meeting on <a href="https://indico.gsi.de/event/15509/overview">Effective Field Theories for Nuclei and Nuclear Matter</a>, January 15, 2023.
+  </li>
+
    <li>
     <a href="/assets/talks/Phillips_MITP20.pdf"><i>Quantifying uncertainties in light-ion reactions using EFT and Bayesian methods</i></a>, presented by Daniel Phillips at the <a href="https://indico.mitp.uni-mainz.de/event/215/overview">MITP workshop on Uncertainties in Calculations of Nuclear Reactions of Astrophysical Interest</a> (virtual) December 10, 2020.
   </li>
