--- a/_pages/talks-archive.html
+++ b/_pages/talks-archive.html
@@ -21,11 +21,11 @@ permalink: /talks/
   </li>
 
   <li>
-    <a href="/assets/talks/Furnstahl_MSU_March_2023.pptx"><i>Uncertainty Quantification for Nuclear Models</i></a> <a href="/assets/talks/Furnstahl_MSU_March_2023.pdf">pdf version</a>], presented by Dick Furnstahl, MSU Nuclear Seminar, March 15, 2023.
+    <a href="/assets/talks/Furnstahl_MSU_March_2023.pptx"><i>Uncertainty Quantification for Nuclear Models</i></a> [<a href="/assets/talks/Furnstahl_MSU_March_2023.pdf">pdf version</a>], presented by Dick Furnstahl, MSU Nuclear Seminar, March 15, 2023.
   </li>
 
   <li>
-    <a href="/assets/talks/Furnstahl_Hirschegg_January_2023.pptx"><i>Frontiers of Uncertainty Quantification for EFTs</i></a> <a href="/assets/talks/Furnstahl_Hirschegg_January_2023.pdf">pdf version</a>], presented by Dick Furnstahl, EMMI Hirschegg meeting on <a href="https://indico.gsi.de/event/15509/overview">Effective Field Theories for Nuclei and Nuclear Matter</a>, January 15, 2023.
+    <a href="/assets/talks/Furnstahl_Hirschegg_January_2023.pptx"><i>Frontiers of Uncertainty Quantification for EFTs</i></a> [<a href="/assets/talks/Furnstahl_Hirschegg_January_2023.pdf">pdf version</a>], presented by Dick Furnstahl, EMMI Hirschegg meeting on <a href="https://indico.gsi.de/event/15509/overview">Effective Field Theories for Nuclei and Nuclear Matter</a>, January 15, 2023.
   </li>
 
    <li>
