--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -31,6 +31,13 @@ permalink: /software/
 <ul>
 
   <li>
+   <a href="https://github.com/buqeye/modern_nn_potentials">Notebooks and data</a> to generate all results and figures in
+   <i>"Assessing Correlated Truncation Errors in Modern Nucleon-Nucleon Potentials"</i>
+       by Millican, Furnstahl, Melendez, Phillips, and Pratola,
+    <a href="https://arxiv.org/abs/2402.13165">arXiv:2402.13165</a>.
+  </li>
+
+  <li>
    <a href="https://github.com/buqeye/scattering-emulators">Notebooks and data</a> to generate all results and figures in
    <i>"Wave function-based emulation for nucleon-nucleon scattering in momentum space"</i>
        by Garcia, Drischler, Furnstahl, Melendez, and Zhang,
