adds entry for software for greedy scattering emulators

--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -30,7 +30,14 @@ permalink: /software/
 
 <ul>
 
-  <li>
+ <li>
+   <a href="https://github.com/cdrischler/greedy_emulator">Notebooks and data</a> to generate all results and figures in
+   <i>"Greedy Emulators for Nuclear Two-Body Scattering"</i>
+       by Maldonado, Drischler, Furnstahl, and  Mlinarić
+    <a href="https://arxiv.org/abs/2504.06092">arXiv:2504.06092</a>. See also the <a href="https://github.com/buqeye/cs_greedy_emulator_josh">companion repository</a>.
+  </li>
+
+ <li>
    <a href="https://github.com/buqeye/modern_nn_potentials">Notebooks and data</a> to generate all results and figures in
    <i>"Assessing Correlated Truncation Errors in Modern Nucleon-Nucleon Potentials"</i>
        by Millican, Furnstahl, Melendez, Phillips, and Pratola,
