--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -31,10 +31,10 @@ permalink: /software/
 <ul>
 
  <li>
-   <a href="https://github.com/cdrischler/greedy_emulator">Notebooks and data</a> to generate all results and figures in
+   <a href="https://github.com/buqeye/cs_greedy_emulator">Notebooks and data</a> to generate all results and figures in
    <i>"Greedy Emulators for Nuclear Two-Body Scattering"</i>
        by Maldonado, Drischler, Furnstahl, and  Mlinarić
-    <a href="https://arxiv.org/abs/2504.06092">arXiv:2504.06092</a>. See also the <a href="https://github.com/buqeye/cs_greedy_emulator_josh">companion repository</a>.
+    <a href="https://arxiv.org/abs/2504.06092">arXiv:2504.06092</a>. See also the <a href="https://github.com/buqeye/cs_greedy_emulator_josh">companion repository, which creates the illustration in Figure 1 and more.</a>.
   </li>
 
  <li>
