--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -31,6 +31,16 @@ permalink: /software/
 <ul>
 
  <li>
+   <a href="https://github.com/buqeye/CERES">Notebooks and codes</a> to generate results and figures in
+   <i>"Non-Hermitian Quantum Mechanics Approach for Extracting and Emulating Continuum Physics Based on Bound-State-Like Calculations"</i>
+       by Xilin Zhang
+    <a href="https://arxiv.org/abs/2408.03309">arXiv:2408.03309</a> and <i>"Non-Hermitian quantum mechanics approach for extracting and emulating continuum physics based on bound-state-like calculations: Detailed
+    description"</i>
+       by Xilin Zhang
+    <a href="https://arxiv.org/abs/2411.06712">arXiv:2411.06712</a>. 
+  </li>
+  
+  <li>
    <a href="https://github.com/buqeye/cs_greedy_emulator">Notebooks and data</a> to generate all results and figures in
    <i>"Greedy Emulators for Nuclear Two-Body Scattering"</i>
        by Maldonado, Drischler, Furnstahl, and  Mlinarić
