adds Giri et al paper

--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -30,6 +30,13 @@ permalink: /software/
 
 <ul>
 
+  <li>
+   <a href="https://github.com/buqeye/ms_greedy_emulator">Notebooks and data</a> to generate all results and figures in
+   <i>"Active learning emulators for nuclear two-body scattering in momentum space"</i>
+       by Giri, Kim, Drischler, Elster, and Furnstahl
+    <a href="https://arxiv.org/abs/2512.17842">arXiv:2512.17842</a>.
+  </li>
+
  <li>
    <a href="https://github.com/buqeye/CERES">Notebooks and codes</a> to generate results and figures in
    <i>"Non-Hermitian Quantum Mechanics Approach for Extracting and Emulating Continuum Physics Based on Bound-State-Like Calculations"</i>
