Update links and descriptions in software archive

--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -34,15 +34,14 @@ permalink: /software/
    <a href="https://github.com/buqeye/ms_greedy_emulator">Notebooks and data</a> to generate all results and figures in
    <i>"Active learning emulators for nuclear two-body scattering in momentum space"</i>
        by Giri, Kim, Drischler, Elster, and Furnstahl
-    <a href="https://arxiv.org/abs/2512.17842">arXiv:2512.17842</a>.
+    <a href="https://arxiv.org/abs/2512.17842">arXiv:2512.17842</a>. The JAX implementation can be found <a href="https://github.com/kim-jane/jaxem/">here</a>.
   </li>
 
  <li>
    <a href="https://github.com/buqeye/CERES">Notebooks and codes</a> to generate results and figures in
    <i>"Non-Hermitian Quantum Mechanics Approach for Extracting and Emulating Continuum Physics Based on Bound-State-Like Calculations"</i>
        by Xilin Zhang
-    <a href="https://arxiv.org/abs/2408.03309">arXiv:2408.03309</a> and <i>"Non-Hermitian quantum mechanics approach for extracting and emulating continuum physics based on bound-state-like calculations: Detailed
-    description"</i>
+    <a href="https://arxiv.org/abs/2408.03309">arXiv:2408.03309</a> and <i>"Non-Hermitian quantum mechanics approach for extracting and emulating continuum physics based on bound-state-like calculations: Detailed description"</i>
        by Xilin Zhang
     <a href="https://arxiv.org/abs/2411.06712">arXiv:2411.06712</a>. 
   </li>
@@ -51,7 +50,7 @@ permalink: /software/
    <a href="https://github.com/buqeye/cs_greedy_emulator">Notebooks and data</a> to generate all results and figures in
    <i>"Greedy Emulators for Nuclear Two-Body Scattering"</i>
        by Maldonado, Drischler, Furnstahl, and  Mlinarić
-    <a href="https://arxiv.org/abs/2504.06092">arXiv:2504.06092</a>. See also the <a href="https://github.com/buqeye/cs_greedy_emulator_josh">companion repository, which creates the illustration in Figure 1 and more.</a>.
+    <a href="https://arxiv.org/abs/2504.06092">arXiv:2504.06092</a>. See also the <a href="https://github.com/buqeye/cs_greedy_emulator_josh">companion repository</a>, which creates the illustration in Figure 1 and more.
   </li>
 
  <li>
